raspberry-pi-playbooks/cluster/kubernetes/esphome/esphome-template.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      containers:
        - name: esphome
          image: ghcr.io/esphome/esphome:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 6052
            - containerPort: 6123
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: /config
              name: esphome-storage
      volumes:
        - name: esphome-storage
          persistentVolumeClaim:
            claimName: esphome-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: home-assistant
spec:
  type: NodePort
  ports:
    - name: web
      port: 6052
      targetPort: 6052
      nodePort: 30605
      protocol: TCP
    - name: api
      port: 6123
      targetPort: 6123
      protocol: TCP
  selector:
    app: esphome

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: esphome
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`esphome.kubecluster`)
      kind: Rule
      services:
        - name: esphome
          port: 6052
  tls:
    secretName: local-cert
